# HarnessBrain

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements-terminal.txt  requirements.txt  run.sh
docs/plans/: 2026-07-04-ast-state-compatibility.md
scripts/: download_data.py  run_eval.sh
src/: anthropic_caching.py  benchmark.py  claude_wrapper.py  data.py  evolve.py  inner_loop.py  llm.py  memory_system.py  model_config.py
src/agents/: fewshot_all.py  fewshot_memory.py  no_memory.py
src/harness_agents/: baseline_kira.py  baseline_terminus2.py  observation_truncation_v1.py  wallclock_budget_aware.py
src/harness_agents/templates/: aci_install.sh  mini_aci_swebench_xml.txt  mini_swebench_xml.txt
src/memory/: __init__.py  config_loader.py
src/memory/encoding/: ast_structure.py  component_evidence.py  direction_cluster.py  episode_recorder.py  inter_component.py  task_outcome_memory.py  trajectory_behavior.py
src/memory/reporting/: metrics_collector.py
src/memory/steering/: component_playbook.py  constraint_layer.py  proposal_plan.py  reading_strategy.py
src/memory/updating/: evolution_operators.py  guidance_tracker.py  memory_utility.py
tests/: test_task_evidence_guidance.py  test_task_outcome_memory.py  test_terminal_task_outcome_guard.py
