[project]
name = "rado"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "litellm<1.82.7",
    "openai-harmony",
    "rdkit>=2026.3.1",
    "tenacity>=8",
    "tqdm",
    "pyyaml",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Terminal-Bench / SWE-bench path requires Python 3.12, Docker, and Runloop.
terminal = [
    "harbor==0.3.0; python_version >= '3.12' and python_version < '3.13'",
    "litellm==1.82.6; python_version >= '3.12' and python_version < '3.13'",
    "tenacity==9.1.4; python_version >= '3.12' and python_version < '3.13'",
    "python-dotenv==1.2.2; python_version >= '3.12' and python_version < '3.13'",
    "terminal-bench @ git+https://github.com/harbor-framework/terminal-bench.git@1a6ffa9674b571da0ed040c470cb40c4d85f9b9b; python_version >= '3.12' and python_version < '3.13'",
]

[tool.ruff]
exclude = ["src/agents", "src/harness_agents"]
